@@ -1,8 +1,8 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.015.
 use strict;
 use warnings;
 
-use 5.012;
+use 5.014;
 
 use ExtUtils::MakeMaker;
 
@@ -14,31 +14,28 @@ my %WriteMakefileArgs = (
   },
   "DISTNAME" => "Bible-OBML",
   "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.012",
+  "MIN_PERL_VERSION" => "5.014",
   "NAME" => "Bible::OBML",
   "PREREQ_PM" => {
     "Bible::Reference" => "1.02",
     "Clone" => 0,
-    "Moose" => 0,
-    "Moose::Util::TypeConstraints" => 0,
-    "MooseX::Privacy" => 0,
     "Template" => 0,
     "Text::Balanced" => 0,
     "Text::Wrap" => 0,
-    "Throwable" => 0
+    "exact" => 0,
+    "exact::class" => 0
   },
   "TEST_REQUIRES" => {
     "File::Spec" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
-    "Test::Moose" => 0,
     "Test::More" => 0,
     "Test::Most" => 0,
     "constant" => 0,
     "strict" => 0,
     "warnings" => 0
   },
-  "VERSION" => "1.10",
+  "VERSION" => "1.11",
   "test" => {
     "TESTS" => "t/*.t t/Bible/*.t t/Bible/OBML/*.t"
   }
@@ -51,17 +48,14 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
-  "Moose" => 0,
-  "Moose::Util::TypeConstraints" => 0,
-  "MooseX::Privacy" => 0,
   "Template" => 0,
-  "Test::Moose" => 0,
   "Test::More" => 0,
   "Test::Most" => 0,
   "Text::Balanced" => 0,
   "Text::Wrap" => 0,
-  "Throwable" => 0,
   "constant" => 0,
+  "exact" => 0,
+  "exact::class" => 0,
   "strict" => 0,
   "warnings" => 0
 );
